Fix about page layout bug

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -119,6 +119,7 @@
 
   .about-all-benifits {
     flex-direction: row;
+    justify-content: space-between;
     max-width: none;
   }
 
